<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="35dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/layouts"
        android:textAllCaps="false"
        android:onClick="callOne"/>

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/components"
        android:textAllCaps="false"
        android:onClick="callTwo"/>

    <Button
        android:id="@+id/btnThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/activity_lifecycle"
        android:textAllCaps="false"
        android:onClick="callThree"/>

    <Button
        android:id="@+id/btnFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/data_persistence"
        android:textAllCaps="false"
        android:onClick="callFour"/>

    <Button
        android:id="@+id/btnFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/data_binding"
        android:textAllCaps="false"
        android:onClick="callFive"/>

    <Button
        android:id="@+id/btnSix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/api_call"
        android:textAllCaps="false"
        android:onClick="callSix"/>

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/architecture"
        android:textAllCaps="false"
        android:onClick="callSeven"/>


    <Button
        android:id="@+id/btnEight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/retrofit_recycle_viewbinding"
        android:textAllCaps="false"
        android:onClick="callEight"/>


    <Button
        android:id="@+id/btnNine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="@string/room"
        android:textAllCaps="false"
        android:onClick="callNine"/>


    <Button
        android:id="@+id/btnTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:backgroundTint="@null"
        android:background="@drawable/green_button_bg"
        android:text="Movie"
        android:textAllCaps="false"
        android:onClick="callTen"/>
</LinearLayout>