<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:layout_margin="90dp"
tools:context=".data_persistence.DataPersistenceMainActivity">

<Button
    android:id="@+id/btnSharedPref"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/shared_preference"
    android:textAllCaps="false"
    android:layout_gravity="center_horizontal"
    android:onClick="callSharedPref"/>

<Button
    android:id="@+id/btnSQL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/sqlite"
    android:textAllCaps="false"
    android:onClick="callSQLite"/>

<Button
    android:id="@+id/btnInternalStorage"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:text="@string/internal_storage"
    android:textAllCaps="false"
    android:onClick="callInternal"/>
</LinearLayout>