<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
tools:context=".layout.MyLinear.MyLinearLayoutActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="12dp"
    android:text="@string/skip"/>

<ImageView

    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:src="@drawable/one"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/take_care"
    android:layout_gravity="center"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="60sp"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/of_your_health"
    android:layout_gravity="center"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="40sp"/>

<LinearLayout
    android:layout_width="193dp"
    android:layout_height="65dp"
    android:orientation="horizontal"
    android:background="@drawable/border"
    android:layout_marginStart="105dp"
    android:layout_marginLeft="45dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/get_started"
        android:textColor="@color/black2"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:background="@drawable/custom_button"
        android:drawableRight="@drawable/ic_input_arrow_forward_24"
        android:textAllCaps="false"
        android:textSize="12dp"
        app:backgroundTint="@null" />

</LinearLayout>

</LinearLayout>