<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:context=".layout.MyConstraint.MyConstraintLayoutActivity">

<TextView
    android:id="@+id/textView"
    android:layout_width="72dp"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    android:text="@string/skip"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.047"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<ImageView
    android:id="@+id/imageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:layout_gravity="center"
    android:src="@drawable/one"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.491"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/take_care"
    android:textColor="@color/black"
    android:textSize="60sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView" />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:text="@string/of_your_health"
    android:textColor="@color/black"
    android:textSize="40sp"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />


<TextView
    android:id="@+id/editText"
    android:layout_width="193dp"
    android:layout_height="64dp"
    android:layout_gravity="center"
    android:layout_marginTop="25dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/border"
    android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
    android:padding="22dp"
    android:text="@string/get_started"
    android:textColor="@color/black2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3"
    app:layout_constraintVertical_bias="0.0" />

<Button
    android:id="@+id/arrow"
    android:layout_width="65dp"
    android:layout_height="65dp"
    android:layout_gravity="center"
    android:background="@drawable/custom_button"
    android:drawableRight="@drawable/ic_input_arrow_forward_24"
    android:textAllCaps="false"
    android:textSize="12dp"
    app:backgroundTint="@null"
    app:layout_constraintBottom_toBottomOf="@+id/editText"
    app:layout_constraintEnd_toEndOf="@+id/editText"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="@+id/editText"
    app:layout_constraintTop_toTopOf="@+id/editText"
    app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>